--- a/amny-app.html
+++ b/amny-app.html
@@ -48,7 +48,7 @@
                 
                         <p>AM New York is a morning free daily newspaper that is part of Newsday Media Group. 
                                 amNewYork brings you all the fast-changing news, sports, and lifestyle information 
-                                 related to NYC. Informatiom about Enertainment, Restaurants, Sports scores to weather updates
+                                 related to NYC. Information about Entertainment, Restaurants, Sports scores to weather updates
                                  from your mobile device.
                         </p>     
                         <a id="portfolio-button" class="button" href="#info" title="View portfolio items">Read More 
