--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         technologies like HTML5, PHP3, CSS3, JavaScript and jQuery, to transform artwork into mobile first
                         interactive and fully functional and responsive interfaces. I leverage CMS systems like WordPress and 
                         Joomla to develop content managed websites. My coding process involves the cleanest rendering of HTML5 
-                        and CSS to make the design process as efficent as possible. </p>
+                        and CSS for maximum efficiency and usability. </p>
                     </div>
 
                     </aside>
