--- a/lhm-web.html
+++ b/lhm-web.html
@@ -62,10 +62,10 @@
                     <h2>Project Overview </h2>
                     <p>LHM Law Firm was in need of an update for their website, which was out of date in terms of 
                         design and functionality. They also wanted a responsive website they could administrate themselves and were interested in
-                    WordPress as their solution. They were looking for a clean, unluttered look to both their desktop
-                    and mobile sites. </p>
-                    <p>Templates were designed in Photoshop. The website was built in WordPress with a customized theme. Sine launch, their new responsive website
-                        has generously increased their web traffic and LHM Law have recieved very positive feedback from website users.
+                    WordPress as their solution. They were looking for a clean, engaging layout for both their desktop
+                    and mobile presence. </p>
+                    <p>Templates were designed in Photoshop. The website was built in WordPress with a customized theme. Since launch, their new responsive website
+                        has generously increased their web traffic and LHM Law have recieved positive feedback from their clients.
                 </p> 
                         <h3>Objectives</h3>
                         <ul>
