--- a/nd-app.html
+++ b/nd-app.html
@@ -44,7 +44,7 @@
                         <h1>Newsday Mobile App</h1>                
                         <p>The first mobile app from Newsday brought all the elements of the website to 
                             a native app download. Design elements included page fronts, story galleries, story pages. Media
-                            content such as photo/video galleries. All of the challenges of delivering the news in a mobile format.
+                            content such as photo/video galleries.
                         </p>     
                         <a id="portfolio-button2" class="button" href="#info" title="View portfolio items">Read More <i
                             class="fas fa-chevron-down"></i></a>    
@@ -65,9 +65,9 @@
     <section id="info">
             <article class="details">
             <h2>Project Overview </h2>
-            <p>Dowens of different interfaces were needed to be developed and designed for the mobile app, so we could include as much functionality as possible 
+            <p>Dozens of different interfaces were needed to be developed and designed for the mobile app, so we could include as much functionality as possible 
         from the website. Templates included landing pages, story lists, articles and weather pages. We also needed
-    to streamline the subscription process for ease of use on mobile devices. The firsty step was to create wireframes for each section using 
+    to streamline the subscription process for ease of use on mobile devices. The first step was to create wireframes for each section using 
 Adobe Illustrator. As each detail was finalized. The final designs were then created with pixel-perfect detail with Adobe Photoshop.</p>
 <h3>Design Contributions</h3>
 <div class="list">
@@ -113,7 +113,7 @@ Adobe Illustrator. As each detail was finalized. The final designs were then cre
     </section>        
         <section class="info">
         <h2>UI/UX Design</h2>
-        <p>I designed interactive pages such as the Traffic Map, and the Weather forecast section. I created several different UI's depending on the users
+        <p>I designed interactive pages such as the Traffic Map, and the Weather forecast section. 3 different interfaces were needed, depending on the users
             subscription level.  </p>
             <article class="scrnshts">
                     <figure>
@@ -140,7 +140,7 @@ Adobe Illustrator. As each detail was finalized. The final designs were then cre
         </section>         
             <section class="info">
             <h2>Designing for different devices</h2>
-            <p>A completetly different UI was needed for the iPad version of the app. The larger viewport allowed for a better 
+            <p>A completely different UI was needed for the iPad version of the app. The larger viewport allowed for a better 
                experience in terms of viewing media and other sections such as Traffic and Weather. </p>
                 <article class="screens">
                         <figure>
