--- a/nd-web.html
+++ b/nd-web.html
@@ -63,8 +63,8 @@
     <section id="info">
     <article class="details">
             <h2>Project Overview </h2>
-            <p>As the senior designer on this project, I was an intergal part of the Life Cycle process including Analysis, Design and Development.  
-            I provided mockups from wireframes to full-size comps. I used HTML, PHP,SASS and JQuery to build mobile-first, responsive 
+            <p>As the senior designer on this project, I was an intregal part of the life cycle process including Analysis, Design and Development.  
+            I provided mockups from wireframes to full-size comps. I used HTML, PHP, SASS and JQuery to build mobile-first, responsive 
             front-end templates that were integrated into a VSCode framework.</p> 
 
             <p>
@@ -74,8 +74,8 @@
                 <h3>Objectives</h3>
 
                 <ul>
-                    <li>Enhancing the company's online presence with the market's wayning demand for print journalism.</li>
-                    <li>How users currently interact with the website and they're expectations for improvement.</li>
+                    <li>Enhancing the company's online presence with the market's shrinking print journalism market.</li>
+                    <li>How users currently interact with the website and their expectations for future enhancements.</li>
                     <li>Enhancing the user experience with the use of new technology and the technical challenges they can pose.</li>
                 </ul>
 
@@ -84,10 +84,10 @@
                 <div class="list">
                         <ul>
                             <li>Site conception and wireframes</li>
-                            <li>Initial homepage and storypage designs</li>
+                            <li>Initial homepage and story page designs</li>
                             <li>Video and Photo gallery designs</li>
                             <li>DOM architecture</li>
-                            <li>Independant HTMl and CSS codesets for Desktop/Mobile </li>
+                            <li>Seperate HTMl and CSS codesets for Desktop/Mobile </li>
                         </ul>
                         
                         <ul>
@@ -95,7 +95,7 @@
                                 <li>Performance testing</li>
                                 <li>App Settings</li>
                                 <li>Icons & Graphics</li>
-                                <li>Subsciptiom forms flow</li>
+                                <li>Subscription forms flow</li>
                             </ul>
                         </div>
 
