--- a/amny-web.html
+++ b/amny-web.html
@@ -45,9 +45,8 @@
                 
                         <p>AM New York is a morning free daily newspaper that is part of Newsday Media Group. 
                                 amNewYork brings you all the fast-changing news, sports, and lifestyle information 
-                                 related to NYC. Informatiom about Enertainment, Restaurants, Sports scores to weather updates
+                                 related to NYC. All the latest Enertainment, Restaurants, Sports scores to weather updates
                                  from your mobile device.
-
                         </p>     
                         <a id="portfolio-button" class="button" href="#secondary" title="View portfolio items">Read More <i
                             class="fa fa-angle-down"></i></a>    
