Portfolio content updates and styles

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <section id="about">
             <div class="title">
                 <h2>I Am Available for Hire</h2>
-                <p>Whether it’s a contrat or full-time opportunity. I am available to discuss the opportunity to help build your business</p>
+                <p>Whether it’s a contract or full-time opportunity. I am available to discuss the opportunity to help build your business</p>
                 </div>
             <article>
              <div class="row">
@@ -77,7 +77,7 @@
              </div> 
              </div>
  
-             <a href="/" class="button">Contact Me</a>  
+             <a href="#contact" class="button">Contact Me</a>  
 
             </article>
         </section>
@@ -85,7 +85,7 @@
              <div class="jumbotron">
                  <div class="title">
                  <h3>What I've Been Doing Lately...</h3>
-                 <p>Here's a selection of some recent work. For more up to the minute work you can visit me on dribbble or twitter.</p>
+                 <p>Here's a selection of some recent work.</p>
                 </div>
                  <i class="fab fa-sketch"></i>
                  <i class="fab fa-wordpress"></i>
@@ -100,9 +100,10 @@
                 <img src="images/portfolio/nd-app.jpg"/>
             <div class="title">
                 <h3>Newsday App</h3>
-                <p>UI Design/UX Design</p>
+                <p>UI Design / UX Design</p>
                 <p>As the senior designer on this project, I was an intregal part of the life cycle process including Analysis, Design and Development. I provided mockups from wireframes to full-size comps. I used HTML, PHP, SASS and JQuery to build mobile-first, responsive front-end templates that were integrated into a VSCode framework.</p>
             </div>
+            <a href="https://www.newsday.com/services/newsday-apps-1.1319154" class="button">View this project</a>
         </article>
         </section>
         <section id="advantage" class="lt">
@@ -110,11 +111,13 @@
             <img src="images/portfolio/apt-landing.jpg"/>
         <div class="title">
             <h3>Advantage Physical Therapy</h3>
-            <p>UI Design/UX Design</p>
+            <p>UI Design / HTML / PHP / CSS / JS</p>
             <p>Advantage Physical Therapy located in NJ, had a website that was outdated in term of appearance and technology. 
                 They needed a responsive website with a modern theme that they could administrate documents and patient forms. 
                 Using a custom template, I leveraged a WordPress that fit their needs in terms of look and content delivery.</p>
         </div>
+        <a href="http://advantageptbrick.com" class="button">View this project</a>
+
         </article>
     </section>
     <section id="nd" class="lt">
@@ -122,11 +125,12 @@
             <img src="images/portfolio/nd-web.jpg"/>
         <div class="title">
             <h3>Newsday Website</h3>
-            <p>UI Design/UX Design</p>
+            <p>UI Design / UX Design / HTML / CSS / JS</p>
             <p>Advantage Physical Therapy located in NJ, had a website that was outdated in term of appearance and technology. 
                 They needed a responsive website with a modern theme that they could administrate documents and patient forms. 
                 Using a custom template, I leveraged a WordPress that fit their needs in terms of look and content delivery.</p>
         </div>
+        <a href="http://newsday.com" class="button">View this project</a>
         </article>
     </section>
     <section id="n12">
@@ -134,32 +138,24 @@
             <img src="images/portfolio/n12-app.jpg"/>
         <div class="title">
             <h3>News 12 App</h3>
-            <p>UI Design/UX Design</p>
+            <p>UI Design / UX Design</p>
             <p>As the senior designer on this project, I was an intregal part of the life cycle process including Analysis, Design and Development. I provided mockups from wireframes to full-size comps. I used HTML, PHP, SASS and JQuery to build mobile-first, responsive front-end templates that were integrated into a VSCode framework.</p>
         </div>
+        <a href="https://apps.apple.com/us/app/news-12-mobile/id444268184" class="button">View this Project</a>
     </article>
     </section>
-            <section id="advantage" class="lt">
-        <article>
-            <img src="images/portfolio/apt-landing.jpg"/>
-        <div class="title">
-            <h3>Advantage Physical Therapy</h3>
-            <p>UI Design/UX Design</p>
-            <p>Advantage Physical Therapy located in NJ, had a website that was outdated in term of appearance and technology. 
-                They needed a responsive website with a modern theme that they could administrate documents and patient forms. 
-                Using a custom template, I leveraged a WordPress that fit their needs in terms of look and content delivery.</p>
-        </div>
-        </article>
-    </section>
+
     <section id="lhmlaw">
         <article>
         <img src="images/portfolio/lhm-landing.jpg"/>
         <div class="title">
         <h3>LHM Law Firm</h3>
-        <p>UI Design/UX Design</p>
+        <p>UI Design / UX Design</p>
         <p>LHM Law Firm was in need of an update for their website, which was out of date in terms of design and functionality. They also wanted a responsive website they could administrate themselves and were 
             interested in WordPress as their solution. They were looking for a clean, engaging layout for both their desktop and mobile presence.</p>
     </div>
+    <a href="https://www.lhmlawfirm.com/" class="button">View this Project</a>
+
 </article>
 </section>
 <section id="fcconstruct" class="lt">
@@ -167,10 +163,12 @@
     <img src="images/portfolio/ftc-landing.jpg"/>
     <div class="title">
     <h3>FT Construction</h3>
-    <p>UI Design/UX Design</p>
+    <p>UI Design / HTML / PHP / CSS / JS</p>
     <p>As an exploration in product design and architecture I have been working on an idea for a restaurant reservation system. 
         Thoroughly challenging thinking through the product design but ultimately rewarding.</p>
 </div>
+<a class="button disabled">Under Development</a>
+
 </article>
 </section>
 
@@ -179,10 +177,12 @@
     <img src="images/portfolio/fdm-signup.jpg"/>
     <div class="title">
     <h3>Finca Del Mar HOA</h3>
-    <p>UI Design/UX Design</p>
+    <p>UI Design / UX Design</p>
     <p>As an exploration in product design and architecture I have been working on an idea for a restaurant reservation system. 
         Thoroughly challenging thinking through the product design but ultimately rewarding.</p>
 </div>
+<a class="button disabled">Under Development</a>
+
 </article>
 </section>
 
