--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description"
         content="I design and build websites and applications for viewing on a television, desktop, tablet or mobile device">
     <meta name="robots" content="noindex,nofollow" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,900,700,300" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:400,600&display=swap" rel="stylesheet">" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" rel="stylesheet">
     <link href="css/global.css" rel="stylesheet" type="text/css" />
 </head>
@@ -15,10 +15,10 @@
     <div id="wrapper" class="home">
         <a href="#home" class="top"><i class="fa fa-arrow-circle-up " aria-hidden="true"></i></a>
         <div id="mobileNav">
-            <a href="#home"><i class="fa fa-home" aria-hidden="true"></i>HOME</a>
-            <a href="#about"><i class="fa fa-info-circle" aria-hidden="true"></i> ABOUT</a>
-            <a href="#portfolio"><i class="fa fa-cogs" aria-hidden="true"></i> WORK</a>
-            <a href="#contact"><i class="fa fa-envelope" aria-hidden="true"></i>CONTACT</a>
+            <a href="#home"><i class="fas fa-home"></i> HOME</a> 
+            <a href="#about"><i class="fas fa-palette"></i> ABOUT ME</a> 
+            <a href="#portfolio"><i class="fas fa-code"></i> MY WORK</a> 
+            <a href="#contact"><i class="fas fa-mobile-alt"></i> CONTACT</a>
         </div>
         <section id="home">
             <header >
@@ -32,10 +32,10 @@
                         </span>
                     </a>
                     <nav>
-                        <a href="index.html#home"><i class="fas fa-home"></i> HOME</a> 
-                        <a href="index.html#about"><i class="fas fa-palette"></i> SKILLS</a> 
-                        <a href="index.html#portfolio"><i class="fas fa-code"></i> MY WORK</a> 
-                        <a href="index.html#contact"><i class="fas fa-mobile-alt"></i> CONTACT</a>
+                        <a href="#home"><i class="fas fa-home"></i> HOME</a> 
+                        <a href="#about"><i class="fas fa-palette"></i> ABOUT ME</a> 
+                        <a href="#portfolio"><i class="fas fa-code"></i> MY WORK</a> 
+                        <a href="#contact"><i class="fas fa-mobile-alt"></i> CONTACT</a>
                     </nav>
                 </div>
             </header>
@@ -63,17 +63,17 @@
              <div class="blurb">
                 <img src="images/ico-design.png"/>
                 <h3>Design</h3>
-                <p>Regardless what device youre using, interfaces are an intgregal part of our web experience. As a UI/UX designer.</p>
+                <p>Regardless of what device youre using, interfaces are an intgregal part of our web experience. Let's work together to create the perfect design. </p>
              </div> 
              <div class="blurb">
                 <img src="images/ico-dev.png"/>                
                 <h3>Development</h3>
-                <p>Regardless what device youre using, interfaces are an intgregal part of our web experience. As a UI/UX designer.</p>
+                <p>I'm a developer, so I know how to create your website to run across devices using the latest technologies available.</p>
              </div>
              <div class="blurb">
                 <img src="images/ico-promo.png"/>
                 <h3>Promotion</h3>
-                <p>Regardless what device youre using, interfaces are an intgregal part of our web experience. As a UI/UX designer.</p>
+                <p>Your amazing new website isn’t going to help your business  if nobody can find it. Let’s make sure they can find it.</p>
              </div> 
              </div>
 
