css variables for fonts

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description"
         content="I design and build websites and applications for viewing on a television, desktop, tablet or mobile device">
     <meta name="robots" content="noindex,nofollow" />
-    <link href="https://fonts.googleapis.com/css?family=Nunito:400,600&display=swap" rel="stylesheet">" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:400,600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" rel="stylesheet">
     <link href="css/global.css" rel="stylesheet" type="text/css" />
 </head>
@@ -122,9 +122,7 @@
         <div class="title">
             <h3>Newsday Website</h3>
             <p>UI Design / UX Design / HTML / CSS / JS</p>
-            <p>Advantage Physical Therapy located in NJ, had a website that was outdated in term of appearance and technology. 
-                They needed a responsive website with a modern theme that they could administrate documents and patient forms. 
-                Using a custom template, I leveraged a WordPress that fit their needs in terms of look and content delivery.</p>
+            <p>The latest redesign of Newsday LLC launched in January 2018. In this version we made drastic changes and improvements to the UX, improving usability and utilizing modern frameworks to deliver a robust experience unique to the news industry.</p>
         </div>
         <a href="http://newsday.com" class="button">View this project</a>
         </article>
