--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description"
         content="I design and build websites and applications for viewing on a television, desktop, tablet or mobile device">
     <meta name="robots" content="noindex,nofollow" />
-    <link href="https://fonts.googleapis.com/css?family=Nunito:400,600&display=swap" rel="stylesheet">" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:400,600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" rel="stylesheet">
     <link href="css/global.css" rel="stylesheet" type="text/css" />
 </head>
@@ -98,7 +98,8 @@
             <div class="title">
                 <h3>Newsday App</h3>
                 <p>UI Design / UX Design</p>
-                <p>As the senior designer on this project, I was an intregal part of the life cycle process including Analysis, Design and Development. I provided mockups from wireframes to full-size comps. I used HTML, PHP, SASS and JQuery to build mobile-first, responsive front-end templates that were integrated into a VSCode framework.</p>
+                <p>The first mobile app from Newsday brought all the elements of the website to a native app download. Design elements included page fronts, 
+                    story galleries, story pages. Media content such as photo/video galleries.</p>
             </div>
             <a href="https://www.newsday.com/services/newsday-apps-1.1319154" class="button">View this project</a>
         </article>
@@ -133,7 +134,7 @@
         <div class="title">
             <h3>News 12 App</h3>
             <p>UI Design / UX Design</p>
-            <p>As the senior designer on this project, I was an intregal part of the life cycle process including Analysis, Design and Development. I provided mockups from wireframes to full-size comps. I used HTML, PHP, SASS and JQuery to build mobile-first, responsive front-end templates that were integrated into a VSCode framework.</p>
+            <p>As a lead designer on this project, I was an intregal part of the life cycle process including Analysis, Design and Development.</p>
         </div>
         <a href="https://apps.apple.com/us/app/news-12-mobile/id444268184" class="button">View this Project</a>
     </article>
@@ -148,6 +149,18 @@
             interested in WordPress as their solution. They were looking for a clean, engaging layout for both their desktop and mobile presence.</p>
     </div>
     <a href="https://www.lhmlawfirm.com/" class="button">View this Project</a>
+</article>
+</section>
+<section id="amny">
+    <article>
+    <img src="images/portfolio/amny-app.jpg"/>
+    <div class="title">
+    <h3>AMNY App</h3>
+    <p>UI/UX Design</p>
+    <p>AM New York is a morning free daily newspaper that brings you all the fast-changing news, 
+    sports, and lifestyle information related to NYC. As a lead Designer on this project my role involved the design of several templates for story and news front pages. </p>
+</div>
+<a href="https://apps.apple.com/us/app/ammetronewyork/id1485714879" class="button">View this Project</a>
 </article>
 </section>
 <section id="fcconstruct" class="lt">
