--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="mobileNav">
             <a href="#home"><i class="fas fa-home"></i> HOME</a> 
             <a href="#about"><i class="fas fa-palette"></i> ABOUT ME</a> 
-            <a href="#portfolio"><i class="fas fa-code"></i> MY WORK</a> 
+            <a href="#newsday"><i class="fas fa-code"></i> MY WORK</a> 
             <a href="#contact"><i class="fas fa-mobile-alt"></i> CONTACT</a>
         </div>
         <section id="home">
@@ -34,7 +34,7 @@
                     <nav>
                         <a href="#home"><i class="fas fa-home"></i> HOME</a> 
                         <a href="#about"><i class="fas fa-palette"></i> ABOUT ME</a> 
-                        <a href="#portfolio"><i class="fas fa-code"></i> MY WORK</a> 
+                        <a href="#newsday"><i class="fas fa-code"></i> MY WORK</a> 
                         <a href="#contact"><i class="fas fa-mobile-alt"></i> CONTACT</a>
                     </nav>
                 </div>
@@ -52,10 +52,9 @@
                     <i class="fas fa-chevron-down"></i></a>
                 </article>
         </section>
-<div id="portfolio">
         <section id="about">
             <div class="title">
-                <h2>I Am Available for Hire</h2>
+                <h2>I Am Available For Hire</h2>
                 <p>Whether it’s a contract or full-time opportunity. I am available to discuss the opportunity to help build your business</p>
                 </div>
             <article>
@@ -122,7 +121,7 @@
             <img src="images/portfolio/nd-web.jpg"/>
         <div class="title">
             <h3>Newsday Website</h3>
-            <p>UI Design / UX Design / HTML / CSS / JS</p>
+            <p>UI/UX Design / HTML / CSS / JS</p>
             <p>The latest redesign of Newsday LLC launched in January 2018. In this version we made drastic changes and improvements to the UX, improving usability and utilizing modern frameworks to deliver a robust experience unique to the news industry..</p>
         </div>
         <a href="http://newsday.com" class="button">View this project</a>
@@ -133,7 +132,7 @@
             <img src="images/portfolio/n12-app.jpg"/>
         <div class="title">
             <h3>News 12 App</h3>
-            <p>UI Design / UX Design</p>
+            <p>UI/UX Design</p>
             <p>As a lead designer on this project, I was an intregal part of the life cycle process including Analysis, Design and Development.</p>
         </div>
         <a href="https://apps.apple.com/us/app/news-12-mobile/id444268184" class="button">View this Project</a>
@@ -144,7 +143,7 @@
         <img src="images/portfolio/lhm-landing.jpg"/>
         <div class="title">
         <h3>LHM Law Firm</h3>
-        <p>UI Design / UX Design</p>
+        <p>UI/UX Design</p>
         <p>LHM Law Firm was in need of an update for their website, which was out of date in terms of design and functionality. They also wanted a responsive website they could administrate themselves and were 
             interested in WordPress as their solution. They were looking for a clean, engaging layout for both their desktop and mobile presence.</p>
     </div>
@@ -180,14 +179,13 @@
     <img src="images/portfolio/fdm-signup.jpg"/>
     <div class="title">
     <h3>Finca Del Mar HOA</h3>
-    <p>UI Design / UX Design</p>
+    <p>UI/UX Design</p>
     <p>As an exploration in product design and architecture I have been working on an idea for a restaurant reservation system. 
         Thoroughly challenging thinking through the product design but ultimately rewarding.</p>
 </div>
 <a class="button disabled">Under Development</a>
 </article>
 </section>
-</div>
         <footer id="contact">
             <section>
                 <h3>Contact Me</h3>
