--- a/index.html
+++ b/index.html
@@ -168,8 +168,7 @@
     <div class="title">
     <h3>FT Construction</h3>
     <p>UI Design / HTML / PHP / CSS / JS</p>
-    <p>As an exploration in product design and architecture I have been working on an idea for a restaurant reservation system. 
-        Thoroughly challenging thinking through the product design but ultimately rewarding.</p>
+    <p>Custom WordPress theme leveraged for the construction business website. Design, development and SEO marketing were all accomplished myself as a freelance prject.</p>
 </div>
 <a class="button disabled">Under Development</a>
 </article>
@@ -180,8 +179,7 @@
     <div class="title">
     <h3>Finca Del Mar HOA</h3>
     <p>UI/UX Design</p>
-    <p>As an exploration in product design and architecture I have been working on an idea for a restaurant reservation system. 
-        Thoroughly challenging thinking through the product design but ultimately rewarding.</p>
+    <p>Initial design comps for an app to assist the home owners association manage their community information, news and other vital information.</p>
 </div>
 <a class="button disabled">Under Development</a>
 </article>
