--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="robots" content="noindex,nofollow" />
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" rel="stylesheet">
-    <link href="css/global.css" rel="stylesheet" type="text/css" />
+    <link href="css/global.min.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div id="wrapper" class="home">
