splash page dispay fixes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="robots" content="noindex,nofollow" />
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" rel="stylesheet">
-    <link href="css/global.min.css" rel="stylesheet" type="text/css" />
+    <link href="css/global.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div id="wrapper" class="home">
@@ -25,7 +25,6 @@
                 <div class="inner">
                     <a href="/" class="logo">
                         <span class="brand"><em>M</em> <em>H</em></span>
-
                         <span class="name">
                             <strong>MATT<em>/</em>HOGEBOOM</strong>
                             <p>UI Designer / Website Developer</p>
