--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="mobileNav">
             <a href="#home"><i class="fas fa-home"></i> HOME</a> 
             <a href="#about"><i class="fas fa-palette"></i> ABOUT ME</a> 
-            <a href="#newsday"><i class="fas fa-code"></i> MY WORK</a> 
+            <a href="#portfolio"><i class="fas fa-code"></i> MY WORK</a> 
             <a href="#contact"><i class="fas fa-mobile-alt"></i> CONTACT</a>
         </div>
         <section id="home">
@@ -50,19 +50,19 @@
                  </span>
             <article>
                 <img src="images/img-fish.png" alt="school of fish" width="554" height="297" class="fish"/>
-                <div>
+                <aside>
                     <h4>Why work with me</h4>
                     <p>With 20 years in design and digital marketing, I’ve always prided myself on doing meaningful work; 
                         approaching each project as a problem that needs solving. My goal is to create solutions that will help 
                         your business or organization stand out in this age of digital noise. No fluff, sales presentations, or 
                         useless tactics. Whatever your needs are, I help you market WITH people and NOT at them.</p>
-                </div>
-                <div>
+                </aside>
+                <aside>
                     <h4>What this means for you</h4>
                     <p>Each project I undertake is a partnership. My experiene with Interactive design, development, sales, and Direct Marketing campaigns 
                         combined with your metrics and vision is what creates succesful products. Each project begins with reseach and investigation
                         into the market, identifying the competition and establishing a competitive advvantage for your organization.</p>
-                </div>
+                </aside>
                 <img src="images/img-turtle.png" alt="turtle" width="467" height="344" class="turtle"/>
 
                 </article>
