--- a/index.html
+++ b/index.html
@@ -79,46 +79,46 @@
                  </span>
            <article class="grid">
             <div>
-                <img src="images/portfolio/img-apt.jpg" width="270" height="211">
+               <a href="https://advantageptnj.com"><img src="images/portfolio/img-apt.jpg" width="270" height="211"></a>
                 <p>Advantage Physical Therapy</p>
                 <em>UI DESIGN / WordPress</em>
                 </em>
             </div>
             <div>
-                <a href="/"><img src="images/portfolio/nd-app.jpg" width="270" height="211"></a>
+                <a href="https://apps.apple.com/us/app/newsday/id358571317"><img src="images/portfolio/nd-app.jpg" width="270" height="211"></a>
                 <p>Newsday Appp</p>
                 <em>UI DESIGN</em>
             </div> 
    
             <div>
-                <a href="/"><img src="images/portfolio/img-fdm.jpg" width="270" height="211"></a>
+                <a href="https://www.behance.net/gallery/101996093/Finca-Del-Mar-landing-page"><img src="images/portfolio/img-fdm.jpg" width="270" height="211"></a>
                 <p>Finca Del Mar</p>
                 <em>UI DESIGN</em>
             </div>
 
             <div>
-                <a href="/"><img src="images/portfolio/img-summit.jpg" width="270" height="211"></a>
+                <a href="https://www.behance.net/gallery/101429449/Summit-Financial-Landing-Page"><img src="images/portfolio/img-summit.jpg" width="270" height="211"></a>
                 <p>Summit Financial Group</p>
                 <em>UI DESIGN</em>
             </div>   
             <div>
-                <a href="/"><img src="images/portfolio/n12-app.jpg" width="270" height="211"></a>
+                <a href="https://apps.apple.com/us/app/news-12-mobile/id444268184"><img src="images/portfolio/n12-app.jpg" width="270" height="211"></a>
                 <p>News12 Appp</p>
                 <em>UX / UI DESIGN</em>
             </div> 
             <div>
-                <a href="/"><img src="images/portfolio/img-ftc.jpg" width="270" height="211"></a>
+                <a href="https://www.behance.net/gallery/101561589/FT-Construction-Landing-Page"><img src="images/portfolio/img-ftc.jpg" width="270" height="211"></a>
                 <p>FT Construction</p>
                 <em>UI DESIGN</em>
             </div>    
             <div>
-                <a href="/"><img src="images/portfolio/img-lhm.jpg" width="270" height="211"></a>
+                <a href="https://www.behance.net/gallery/101283519/LHM-Law-Firm"><img src="images/portfolio/img-lhm.jpg" width="270" height="211"></a>
                 <p>LHM Law Firm</p>
                 <em>UI DESIGN / WordPress</em>
             </div>   
             <div>
-                <a href="/"><img src="images/portfolio/amny-app.jpg" width="270" height="211"></a>
-                <p>Newsday Appp</p>
+                <a href="https://play.google.com/store/apps/details?id=com.phonegap.amny&hl=en"><img src="images/portfolio/amny-app.jpg" width="270" height="211"></a>
+                <p>AMNY Appp</p>
                 <em>uX / UI DESIGN</em>
             </div>               
            </article>      
