--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             <header >
                 <div class="inner">
                     <a href="/" class="logo">
-                       <img src="images/svg/logo-mph.svg" width="107" height="124"/>
+                       <img src="images/svg/logo-mph.svg" width="102" height="119"/>
                     </a>
                     <nav>
                         <a href="#home">HOME</a> 
                         <a href="#about">ABOUT ME</a> 
-                        <a href="#newsday">MY WORK</a> 
+                        <a href="#portfolio">MY WORK</a> 
                         <a class="contact" href="#contact">CONTACT</a>
                     </nav>
                 </div>
