--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <p>Send me an email or just say hey</p>
     </div>
 
-    <form enctype="multipart/form-data" method="post" data-aos="fade-up">
+    <!-- <form enctype="multipart/form-data" method="post" data-aos="fade-up">
         <input id="name" name="action" type="hidden" value="submit"> 
 
         <div class="flex-input">
@@ -178,7 +178,7 @@
     <span>
         <button type="submit" value="Send email">Send</button>
     </span>
-      </form>
+      </form> -->
 
       <img src="images/img-octopus.png" width="1332" height="752" class="octopus" data-aos="fade-up-left"/>
 
