--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                             <img src="images/svg/ico-skull.svg" width="32" height="32"/>
                             ABOUT ME</a> 
                         <a href="#portfolio">
-                            <img src="images/svg/ico-portfolio.svg" width="32" height="32"/>
+                            <img src="images/svg/ico-treasure.svg" width="32" height="32"/>
    
                             MY WORK</a> 
                         <a class="contact" href="#contact">
-                            <img src="images/svg/ico-contact.svg" width="32" height="32"/>
+                            <img src="images/svg/ico-map.svg" width="32" height="32"/>
    
                             CONTACT</a>
                     </nav>
@@ -130,9 +130,11 @@
                 <em>uX / UI DESIGN</em>
             </div> 
             <div class="item" data-aos="fade-up">
+                <a href="https://www.behance.net/gallery/101561589/FT-Construction-Landing-Page">
                 <img src="images/portfolio/img-ftc.jpg" alt="FT Construction" width="304" height="240">
                 <p>FT Construction</p>
                 <em>UI DESIGN</em>
+                 </a>
             </div>    
             <div class="item" data-aos="fade-up">
                 <img src="images/portfolio/img-lhm.jpg" alt="LHM Law Firm" width="304" height="240">
