--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div id="wrapper" class="home">
-        <a href="#home" class="top"><i class="fa fa-arrow-circle-up " aria-hidden="true"></i></a>
+        <a href="#home" class="top"><img src="images/svg/"></a>
         <div id="mobileNav">
             <a href="#home" class="home"><i class="fas fa-home"></i> HOME</a> 
             <a href="#about" class="about"><i class="fas fa-palette"></i> ABOUT ME</a> 
@@ -67,14 +67,14 @@
                 <aside>
                 <img src="images/img-fish.png" alt="school of fish" width="554" height="297" class="fish" data-aos="fade-up-right"/>
                 </aside>
-                <aside data-aos="fade">
+                <aside data-aos="fade-left">
                     <h4>Why work with me</h4>
                     <p>With 20 years in design and digital marketing, I’ve always prided myself on doing meaningful work; 
                         approaching each project as a problem that needs solving. My goal is to create solutions that will help 
                         your business or organization stand out in this age of digital noise. No fluff, sales presentations, or 
                         useless tactics. Whatever your needs are, I help you market WITH people and NOT at them.</p>
                 </aside>
-                <aside data-aos="fade">
+                <aside data-aos="fade-right">
                     <h4>What this means for you</h4>
                     <p>Each project I undertake is a partnership. My experiene with Interactive design, development, sales, and Direct Marketing campaigns 
                         combined with your metrics and vision is what creates succesful products. Each project begins with reseach and investigation
@@ -159,7 +159,7 @@
         <p>Send me an email or just say hey</p>
     </div>
 
-    <!-- <form enctype="multipart/form-data" method="post" data-aos="fade-up">
+    <form enctype="multipart/form-data" method="post" data-aos="fade-up">
         <input id="name" name="action" type="hidden" value="submit"> 
 
         <div class="flex-input">
@@ -180,7 +180,7 @@
     <span>
         <button type="submit" value="Send email">Send</button>
     </span>
-      </form> -->
+      </form>
 
       <img src="images/img-octopus.png" width="1332" height="752" class="octopus" data-aos="fade-up-left"/>
 
